--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "teaching_project_handler",
+  "name": "teaching_project_client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,10 +8,30 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.27.0",
+    "@project-serum/anchor": "^0.26.0",
+    "@solana/spl-token": "^0.3.7",
+    "@solana/wallet-adapter-wallets": "^0.19.16",
+    "@solana/web3.js": "^1.77.2",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "crypto-browserify": "^3.12.0",
+    "http-browserify": "^1.7.0",
+    "https-browserify": "^1.0.0",
+    "pinia": "^2.1.4",
+    "solana-wallets-vue": "^0.6.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0",
+    "vue": "^3.2.13",
+    "vue-material": "*",
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
+    "@types/node": "^18.16.16",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -21,6 +41,9 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "node-stdlib-browser": "^1.2.0",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.1",
     "typescript": "~4.5.5"
   }
 }
